ignore full stops in nuclei hash computation

--- a/project/alternatives_generation.ipynb
+++ b/project/alternatives_generation.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "STATEMENTS_DIR = \"/Users/YK/mt/project/statements_5/\"\n",
+    "STATEMENTS_DIR = \"/Users/YK/mt/project/statements_7/\"\n",
     "RACE_PART = \"test/middle\"\n",
     "RACE_DIR = \"/Users/YK/mt/RACE\"\n",
     "PARSED_RACE_DIR = \"/Users/YK/mt/parsed/race\""
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,9 @@
     "    \n",
     "\n",
     "def compute_hash(string):\n",
-    "    return hashlib.md5(string.encode(\"utf-8\")).hexdigest()\n",
+    "    return hashlib.md5(\n",
+    "        \"\".join([c for c in string if c != \".\"]).encode(\"utf-8\")\n",
+    "    ).hexdigest()\n",
     "\n",
     "\n",
     "def create_alternative(statement, relation_data, true_sn_text_len, text, verbose=False):\n",
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -393,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -785,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -827,10 +829,10 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>854</th>\n",
+       "      <th>847</th>\n",
        "      <td>1</td>\n",
-       "      <td>Wang has got used to it because ''I used to sp...</td>\n",
-       "      <td>14d3480a7999933580fc6ff07a26a7d6</td>\n",
+       "      <td>Wang has got used to it because I used to spea...</td>\n",
+       "      <td>b2954ccf1678484773baeddc0ccf1705</td>\n",
        "      <td>Wang has got used to it because she used to ge...</td>\n",
        "      <td>Elaboration</td>\n",
        "      <td>after</td>\n",
@@ -844,10 +846,10 @@
        "      <td>Nucleus starts with 'but'.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>853</th>\n",
+       "      <th>846</th>\n",
        "      <td>1</td>\n",
-       "      <td>Wang has got used to it because ''I used to sp...</td>\n",
-       "      <td>14d3480a7999933580fc6ff07a26a7d6</td>\n",
+       "      <td>Wang has got used to it because I used to spea...</td>\n",
+       "      <td>b2954ccf1678484773baeddc0ccf1705</td>\n",
        "      <td>Wang has got used to it because ''I just looke...</td>\n",
        "      <td>Elaboration</td>\n",
        "      <td>before</td>\n",
@@ -855,33 +857,33 @@
        "      <td>1</td>\n",
        "      <td>13</td>\n",
        "      <td>1.166667</td>\n",
-       "      <td>0.882353</td>\n",
-       "      <td>41</td>\n",
+       "      <td>0.944444</td>\n",
+       "      <td>43</td>\n",
        "      <td>explanation_01</td>\n",
        "      <td>Nucleus starts with 'but'.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>855</th>\n",
+       "      <th>848</th>\n",
        "      <td>1</td>\n",
-       "      <td>Zhang got a grade of more than 80 because ''I ...</td>\n",
-       "      <td>96d4256e267d4ae7aba2f8b088cf5c7c</td>\n",
-       "      <td>Zhang got a grade of more than 80 because ''I ...</td>\n",
+       "      <td>Zhang got a grade of more than 80 because I ra...</td>\n",
+       "      <td>6608d538aad65789374cb3dd57720bc2</td>\n",
+       "      <td>Zhang got a grade of more than 80 because I us...</td>\n",
        "      <td>Explanation</td>\n",
        "      <td>before</td>\n",
        "      <td>20</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
        "      <td>-0.538462</td>\n",
-       "      <td>0.882353</td>\n",
+       "      <td>0.875000</td>\n",
        "      <td>47</td>\n",
        "      <td>explanation_01</td>\n",
        "      <td>Nucleus starts with 'but'.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>852</th>\n",
+       "      <th>845</th>\n",
        "      <td>1</td>\n",
-       "      <td>Wang has got used to it, and ''I used to speak...</td>\n",
-       "      <td>14d3480a7999933580fc6ff07a26a7d6</td>\n",
+       "      <td>Wang has got used to it, and I used to speak l...</td>\n",
+       "      <td>b2954ccf1678484773baeddc0ccf1705</td>\n",
        "      <td>Wang has got used to it, and she used to get a...</td>\n",
        "      <td>Elaboration</td>\n",
        "      <td>after</td>\n",
@@ -895,10 +897,10 @@
        "      <td>Common pattern (Whatever-Contrast).</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>851</th>\n",
+       "      <th>844</th>\n",
        "      <td>1</td>\n",
-       "      <td>Wang has got used to it, and ''I used to speak...</td>\n",
-       "      <td>14d3480a7999933580fc6ff07a26a7d6</td>\n",
+       "      <td>Wang has got used to it, and I used to speak l...</td>\n",
+       "      <td>b2954ccf1678484773baeddc0ccf1705</td>\n",
        "      <td>Wang has got used to it, and ''I just looked a...</td>\n",
        "      <td>Elaboration</td>\n",
        "      <td>before</td>\n",
@@ -906,8 +908,8 @@
        "      <td>1</td>\n",
        "      <td>13</td>\n",
        "      <td>1.166667</td>\n",
-       "      <td>0.882353</td>\n",
-       "      <td>41</td>\n",
+       "      <td>0.944444</td>\n",
+       "      <td>43</td>\n",
        "      <td>explanation_04</td>\n",
        "      <td>Common pattern (Whatever-Contrast).</td>\n",
        "    </tr>\n",
@@ -917,49 +919,49 @@
       ],
       "text/plain": [
        "     text_no                                     true_statement  \\\n",
-       "854        1  Wang has got used to it because ''I used to sp...   \n",
-       "853        1  Wang has got used to it because ''I used to sp...   \n",
-       "855        1  Zhang got a grade of more than 80 because ''I ...   \n",
-       "852        1  Wang has got used to it, and ''I used to speak...   \n",
-       "851        1  Wang has got used to it, and ''I used to speak...   \n",
+       "847        1  Wang has got used to it because I used to spea...   \n",
+       "846        1  Wang has got used to it because I used to spea...   \n",
+       "848        1  Zhang got a grade of more than 80 because I ra...   \n",
+       "845        1  Wang has got used to it, and I used to speak l...   \n",
+       "844        1  Wang has got used to it, and I used to speak l...   \n",
        "\n",
        "                          nuclei_hash  \\\n",
-       "854  14d3480a7999933580fc6ff07a26a7d6   \n",
-       "853  14d3480a7999933580fc6ff07a26a7d6   \n",
-       "855  96d4256e267d4ae7aba2f8b088cf5c7c   \n",
-       "852  14d3480a7999933580fc6ff07a26a7d6   \n",
-       "851  14d3480a7999933580fc6ff07a26a7d6   \n",
+       "847  b2954ccf1678484773baeddc0ccf1705   \n",
+       "846  b2954ccf1678484773baeddc0ccf1705   \n",
+       "848  6608d538aad65789374cb3dd57720bc2   \n",
+       "845  b2954ccf1678484773baeddc0ccf1705   \n",
+       "844  b2954ccf1678484773baeddc0ccf1705   \n",
        "\n",
        "                                 alternative_statement relation_type position  \\\n",
-       "854  Wang has got used to it because she used to ge...   Elaboration    after   \n",
-       "853  Wang has got used to it because ''I just looke...   Elaboration   before   \n",
-       "855  Zhang got a grade of more than 80 because ''I ...   Explanation   before   \n",
-       "852  Wang has got used to it, and she used to get a...   Elaboration    after   \n",
-       "851  Wang has got used to it, and ''I just looked a...   Elaboration   before   \n",
+       "847  Wang has got used to it because she used to ge...   Elaboration    after   \n",
+       "846  Wang has got used to it because ''I just looke...   Elaboration   before   \n",
+       "848  Zhang got a grade of more than 80 because I us...   Explanation   before   \n",
+       "845  Wang has got used to it, and she used to get a...   Elaboration    after   \n",
+       "844  Wang has got used to it, and ''I just looked a...   Elaboration   before   \n",
        "\n",
        "     distance_words  distance_sentences  sn_length  \\\n",
-       "854               0                   0         10   \n",
-       "853              14                   1         13   \n",
-       "855              20                   4          6   \n",
-       "852               0                   0         10   \n",
-       "851              14                   1         13   \n",
+       "847               0                   0         10   \n",
+       "846              14                   1         13   \n",
+       "848              20                   4          6   \n",
+       "845               0                   0         10   \n",
+       "844              14                   1         13   \n",
        "\n",
        "     sn_length_relative_difference  jaccard_distance  edit_distance  \\\n",
-       "854                       0.666667          0.769231             27   \n",
-       "853                       1.166667          0.882353             41   \n",
-       "855                      -0.538462          0.882353             47   \n",
-       "852                       0.666667          0.769231             27   \n",
-       "851                       1.166667          0.882353             41   \n",
+       "847                       0.666667          0.769231             27   \n",
+       "846                       1.166667          0.944444             43   \n",
+       "848                      -0.538462          0.875000             47   \n",
+       "845                       0.666667          0.769231             27   \n",
+       "844                       1.166667          0.944444             43   \n",
        "\n",
        "               rule                               reason  \n",
-       "854  explanation_01           Nucleus starts with 'but'.  \n",
-       "853  explanation_01           Nucleus starts with 'but'.  \n",
-       "855  explanation_01           Nucleus starts with 'but'.  \n",
-       "852  explanation_04  Common pattern (Whatever-Contrast).  \n",
-       "851  explanation_04  Common pattern (Whatever-Contrast).  "
+       "847  explanation_01           Nucleus starts with 'but'.  \n",
+       "846  explanation_01           Nucleus starts with 'but'.  \n",
+       "848  explanation_01           Nucleus starts with 'but'.  \n",
+       "845  explanation_04  Common pattern (Whatever-Contrast).  \n",
+       "844  explanation_04  Common pattern (Whatever-Contrast).  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -987,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1002,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,16 +1022,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "672"
+       "664"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,16 +1046,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "672"
+       "664"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1092,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -1100,10 +1102,10 @@
     {
      "data": {
       "text/plain": [
-       "0.5423580786026201"
+       "0.5413005272407733"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,16 +1116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "621"
+       "616"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,19 +1136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prefiltered_alternatives_test-middle_945cc7e9.xlsx\n"
+     ]
+    }
+   ],
    "source": [
+    "output_file_name = (\n",
+    "    f\"prefiltered_alternatives_{RACE_PART.replace('/', '-')}\"\n",
+    "    f\"_{random.randint(0, 2**32):x}.xlsx\"\n",
+    ")\n",
     "reduced_df.to_excel(\n",
     "    os.path.join(\n",
     "        STATEMENTS_DIR, \n",
-    "        f\"prefiltered_alternatives_{RACE_PART.replace('/', '-')}_{random.randint(0, 2**32):x}.xlsx\"\n",
+    "        output_file_name\n",
     "    ),\n",
     "    index=False\n",
-    ")"
+    ")\n",
+    "print(output_file_name)"
    ]
   },
   {
