--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -218,14 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def uppercase_first_letter(string):\n",
-    "    return string[:1].upper() + string[1:]"
+    "    pointer = 0\n",
+    "    while (\n",
+    "        pointer < len(string) \n",
+    "            and (string[pointer] in {\"'\", '\"', '(', '{', '['} or string[pointer].isspace())\n",
+    "    ):\n",
+    "        pointer += 1\n",
+    "    if pointer >= len(string):\n",
+    "        return string\n",
+    "    else:\n",
+    "        return string[:pointer] + string[pointer].upper() + string[(pointer + 1):]"
    ]
   },
   {
