make punctuation part of nucleus

--- a/project/rule_base.ipynb
+++ b/project/rule_base.ipynb
@@ -54,11 +54,14 @@
     "    def reasons(self):\n",
     "        pass\n",
     "    \n",
+    "    def _add_punctuation(self, text):\n",
+    "        return preparation.add_punctuation(text)\n",
+    "    \n",
     "    def _finalise_statement_parts(\n",
-    "        self, prepared_nucleus_text, prepared_sn_text, verbose=False\n",
+    "        self, prepared_nucleus_text, prepared_sn_text, verbose=False, add_punctuation=False\n",
     "    ):\n",
     "        final_nucleus_text = preparation.finalise_nucleus_text(\n",
-    "            prepared_nucleus_text, verbose\n",
+    "            prepared_nucleus_text, verbose, add_punctuation\n",
     "        )\n",
     "        if final_nucleus_text is None:\n",
     "            return None, None\n",
