generate xlsx files

--- a/project/rce_generation.ipynb
+++ b/project/rce_generation.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "ALTERNATIVES_XLSX_PATH = (\n",
-    "    \"/Users/YK/mt/project/statements_5/paraphrased_test-middle_462603ae.xlsx\"\n",
+    "    \"/Users/YK/mt/project/statements_7/paraphrased_test-middle_1021ac63.xlsx\"\n",
     ")\n",
     "RACE_PART = \"test/middle\"\n",
     "RACE_DIR = \"/Users/YK/mt/RACE\"\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -61,10 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel(ALTERNATIVES_XLSX_PATH)"
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +80,7 @@
        " 'Common pattern (Elaboration-JOINT).'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +100,7 @@
        "{'Common pattern (Condition-Explanation).', 'Common pattern (Nucleus=NN- ).'}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -227,10 +225,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "grouped = pd.merge(\n",
@@ -244,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -266,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +274,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +318,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -351,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -382,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -436,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,26 +448,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1    53\n",
-       "2     8\n",
-       "4     1\n",
-       "3     1\n",
+       "2    10\n",
+       "3     2\n",
        "Name: n_questions, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rce_stats_df.n_questions.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generating xlsx files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ordered_text_numbers = list(\n",
+    "    rce_stats_df.sort_values(\n",
+    "        by=\"n_questions\", ascending=False\n",
+    "    ).text_no\n",
+    ")\n",
+    "first_tier_text_numbers = ordered_text_numbers[:12]\n",
+    "second_tier_text_number = ordered_text_numbers[12:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2518, 3797, 7312, 1675, 1597, 6673, 3010, 2084, 7085, 4227, 2229, 432]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_tier_text_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_xlsx_rce(text_no):\n",
+    "    with open(os.path.join(OUTPUT_DIR, f\"{text_no}.rce.txt\"), \"rt\") as f:\n",
+    "        rce = json.loads(f.read())\n",
+    "    rows = [f\"Text No.{text_no}\", rce[\"race\"][\"article\"], \"\"]\n",
+    "    letters = ['A', 'B', 'C', 'D']\n",
+    "    for i, options in enumerate(rce[\"generated\"][\"generated_options\"]):\n",
+    "        rows.append(f\"Question No.{i + 1}\")\n",
+    "        for j, option in enumerate(options):\n",
+    "            rows.append(f\"({letters[j]}) {option}\")\n",
+    "        rows.append(\"\")\n",
+    "    return rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def save_xlsx(text_numbers, output_dir, file_no):\n",
+    "    rows = []\n",
+    "    for text_no in text_numbers:\n",
+    "        rows.extend(create_xlsx_rce(text_no))\n",
+    "    df = pd.DataFrame(rows, columns=[\"-\"])\n",
+    "    df[\"Is it true?\"] = None\n",
+    "    df[\"Is it grammatically correct?\"] = None\n",
+    "    df[\"How sure were you with the answer?\"] = None\n",
+    "    df[\"How clear and concise is the statement?\"] = None\n",
+    "    df[\"How sensible was the statement?\"] = None\n",
+    "    df[\"How easy was it to answer the question?\"] = None\n",
+    "    df[\"How important is the information asked in the statement?\"] = None\n",
+    "    df.to_excel(os.path.join(output_dir, f\"{file_no}.xlsx\"), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xlsx_output_dir = os.path.join(OUTPUT_DIR, \"excel_files\")\n",
+    "os.makedirs(xlsx_output_dir, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_xlsx([2518, 3436, 2512], xlsx_output_dir, 1)\n",
+    "save_xlsx([3797, 2299, 357], xlsx_output_dir, 2)\n",
+    "for file_no in range(3, 13):\n",
+    "    save_xlsx(\n",
+    "        (\n",
+    "            [first_tier_text_numbers[file_no - 1]]\n",
+    "                + second_tier_text_number[\n",
+    "                    (4 + (file_no - 3) * 3):(4 + (file_no - 3) * 3) + 3\n",
+    "                ]\n",
+    "        ),\n",
+    "        xlsx_output_dir,\n",
+    "        file_no\n",
+    "    )"
    ]
   },
   {
@@ -485,16 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -518,18 +623,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TEXT No.785:\n",
+      "TEXT No.3797:\n",
       "\n",
-      "Today is the fifth day of August. It is Judy's birthday. When she comes back home from school, she sees a card on the table. It says, \"There's a present   for you, Judy. Look for it in your bedroom.\" Judy runs into her bedroom. Her parents are looking at her and _ . On the chair she sees a red box. She thinks her present must be in it. She opens it, and there is a piece of paper in it. She reads it, \"Dear Judy, I'm your present. My first letter is in the word 'bag', but not in 'age'. My second letter is in 'like', but not in 'lake'. My third letter is in \"know\", but not in 'now'. And you can find my last letter in both 'desk' and 'get'. What am I?\" Judy thinks for a while and says, \"Aha, I know. But where is it?\" Her father tells her it is in her study.\n",
-      "What is it? Do you know?\n",
-      ". (5)\n",
+      "Once a tiger was in a cage . Soon a good man went by. As soon as the tiger saw the man, the tiger began to cry. \"Please! Please!\" the tiger called. \"Please, let me out.\" \"No,\" said the good man. \"If I do, you will eat me.\" \"I will not eat you,\" the tiger said. \"Please let me out.\"\n",
+      "The good man believed the tiger. He opened the door of the cage. The tiger jumped out. \"How silly you are,\" the tiger laughed. \"Now I am going to eat you.\" \"Wait!\" the man cried. \"You ought not to eat me. Let us ask others what they think.\" \"You may ask three others. \" the tiger said.\n",
+      "The good man asked a tree. The tree said, \"I give shade  . And yet I am cut down. Let the tiger eat you.\"\n",
+      "Next, the good man asked a bird. The bird said, \"I hurt no one. Yet people hunt and kill me. Let the tiger eat you.\"\n",
+      "The last one that the good man asked was a road. The road said, \"I don't care if the tiger eats you. People could not get along too well without me. Yet all day and all night people step on me without even a 'thank you'.\"\n",
+      "The tiger was ready to eat the good man. Just then a dog came by. \"What is happening?\"\n",
+      "asked the dog. The man told the dog the whole story.\n",
+      "\"I don't understand,\" said the dog. \"The tiger wants to eat you because you put him in a cage?\"\n",
+      "\"No, no,\" said the man. \"Some other men put him in a cage.\"\n",
+      "\"Oh,\" the dog said. \"He is going to eat you because you do not have a cage.\"\n",
+      "\"Silly dog!\" the tiger cried. \"Don't you understand? I was in the cage. This man let me out.\"\n",
+      "\"Oh, I see,\" the dog said. \"When the man was in the cage, you let him out.\"\n",
+      "\"I was in the cage!\" the tiger cried. \"In this way!\" with that, he jumped back into the cage.\n",
+      "At once, the dog closed the door of the cage. \"Oh,\" the dog laughed. \"At last I understand!\"\n",
+      "The good man and the dog walked off. The tiger looked sad in the cage. If he waited long enough, perhaps another good man would come by.\n",
       "\n",
       "\n",
       "GENERATED QUESTIONS:\n",
@@ -537,18 +654,36 @@
       "\n",
       "1. Which of the following is true?\n",
       "\n",
-      "A. She sees a red box, and she thinks her present must be in it.\n",
-      "B. She sees a red box, and Judy runs into her bedroom.\n",
+      "A. HUMAN_INPUT\n",
+      "B. The tiger stated, and let us ask others what they think.\n",
+      "C. The tiger stated, and the satisfactory man asked a tree.\n",
+      "D. The tiger stated, and the bird stated, I damaged no one.\n",
+      "\n",
+      "Answer: C\n",
+      "\n",
+      "2. Which of the following is true?\n",
+      "\n",
+      "A. The tiger jumped out. Moreover, ''How silly you are,'' the tiger laughed.\n",
+      "B. The tiger jumped out. Moreover, ''I will not eat you,'' the tiger stated.\n",
       "C. HUMAN_INPUT\n",
-      "D. She sees a red box, and Judy thinks for a while and states,'' Aha, I know.\n",
+      "D. The tiger jumped out. Moreover, the bird stated, I injured no one.\n",
       "\n",
       "Answer: A\n",
+      "\n",
+      "3. Which of the following is true?\n",
+      "\n",
+      "A. The tiger stated. That is why the wonderful man stated let us ask others what they think.\n",
+      "B. The tiger stated. That is why the excellent man stated the bird stated, I damaged no one.\n",
+      "C. HUMAN_INPUT\n",
+      "D. The tiger stated. That is why the satisfactory man stated \"the fine man asked a tree.\"\n",
+      "\n",
+      "Answer: D\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(rce_to_str(785))"
+    "print(rce_to_str(3797))"
    ]
   },
   {
@@ -558,7 +693,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# unpaired quotes need to be removed\n",
+    "# punctuation must be a part of the nucleus not a connective"
+   ]
   }
  ],
  "metadata": {
