format, add comments

--- a/project/aux/defs.ipynb
+++ b/project/aux/defs.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Defines** basic **data structures** for statement generation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
@@ -19,7 +26,7 @@
    },
    "outputs": [],
    "source": [
-    "Statement = collections.namedtuple(\n",
+    "Statement = collections.namedtuple(  # represents a generated statement\n",
     "    \"Statement\",\n",
     "    [\n",
     "        \"statement_text\",\n",
@@ -31,8 +38,8 @@
     "        \"split_point\",\n",
     "        \"nucleus_proximity\",\n",
     "        \"rule\",\n",
-    "        \"reason\"\n",
-    "    ]\n",
+    "        \"reason\",\n",
+    "    ],\n",
     ")"
    ]
   },
@@ -44,12 +51,12 @@
    },
    "outputs": [],
    "source": [
-    "Reason = collections.namedtuple(\n",
+    "Reason = collections.namedtuple(  # represents a criterion for applying a rule\n",
     "    \"Reason\",\n",
     "    [\n",
-    "        \"id\",\n",
-    "        \"explanation\"\n",
-    "    ]\n",
+    "        \"id\",  # an internal code of the criterion\n",
+    "        \"explanation\",  # a meaningful text description of the criterion\n",
+    "    ],\n",
     ")"
    ]
   }
@@ -70,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
